--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,9 +8,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-    --font-sans:
-        Instrument Sans, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji',
-        'OptimusPrinceps';
+    --font-sans: Instrument Sans, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+
+    --font-game: 'OptimusPrinceps';
 
     --radius-lg: var(--radius);
     --radius-md: calc(var(--radius) - 2px);
@@ -184,7 +184,7 @@
 }
 
 @font-face {
-    font-family: 'optimusPrinceps';
+    font-family: 'OptimusPrinceps';
     src: url('/fonts/OptimusPrinceps.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
